Fix dark/light mode color conflicts and add theme testing
- Add AppColors ThemeExtension with semantic colors for light/dark themes
- Fix hardcoded colors in time_off_page.dart, schedule_home_page.dart
- Fix hardcoded colors in schedule_view.dart, shift_runner_table.dart
- Fix hardcoded colors in navigation_shell.dart (UpdateDialog)
- Add comprehensive theme contrast tests (WCAG AA compliance)
- Add color pattern checker tool (tool/check_color_patterns.dart)
- Document prohibited color patterns in analysis_options.yaml

--- a/work_schedule_app/analysis_options.yaml
+++ b/work_schedule_app/analysis_options.yaml
@@ -26,3 +26,22 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+# =============================================================================
+# THEME COLOR GUIDELINES
+# =============================================================================
+# To maintain consistent dark/light mode support, avoid these color patterns:
+#
+# PROHIBITED PATTERNS (use AppColors from lib/services/app_colors.dart instead):
+#   - Colors.white            → use appColors.textOnSuccess or colorScheme.surface
+#   - Colors.black            → use appColors.textPrimary or colorScheme.onSurface
+#   - Colors.grey[###]        → use appColors.textSecondary or textTertiary
+#   - Colors.*.shade50/100    → use appColors.*Background (e.g., successBackground)
+#   - Color.fromRGBO(0,0,0,*) → use appColors.overlayDim or overlayLight
+#   - Color(0xFF...)          → define semantic colors in AppColors extension
+#
+# Run the color pattern checker script to detect violations:
+#   dart run tool/check_color_patterns.dart
+#
+# See test/theme_contrast_test.dart for theme accessibility tests.
+# =============================================================================
