--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,33 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Dart & Flutter",
+            "name": "Desktop (Debug)",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "cwd": "${workspaceFolder}/ScheduleHQ_Desktop",
+            "program": "lib/main.dart",
+            "args": [
+                "-d", "windows"
+            ],
+            "preLaunchTask": "flutter: install windows"
+        },
+        {
+            "name": "Desktop (Release)",
+            "request": "launch",
+            "type": "dart",
+            "cwd": "${workspaceFolder}/ScheduleHQ_Desktop",
+            "program": "lib/main.dart",
+            "flutterMode": "release",
+            "args": [
+                "-d", "windows"
+            ]
+        },
+        {
+            "name": "Android",
+            "request": "launch",
+            "type": "dart",
+            "cwd": "${workspaceFolder}/ScheduleHQ_Android",
+            "program": "lib/main.dart"
         }
     ]
 }
