--- a/ScheduleHQ_Desktop/pubspec_backup.yaml
+++ b/ScheduleHQ_Desktop/pubspec_backup.yaml
@@ -2,7 +2,11 @@ name: schedulehq_desktop
 description: "ScheduleHQ Desktop - Workforce scheduling and PTO management app."
 publish_to: 'none'
 
-version: 2.5.1+1
+# When bumping the version, also update:
+#   - pubspec.yaml: msix_version (below)
+#   - pubspec_store.yaml: version and msix_version
+#   - lib/services/update_service.dart: currentVersion constant
+version: 2.5.0+1
 
 environment:
   sdk: ^3.10.7
@@ -28,45 +32,36 @@ dependencies:
   # Utilities
   path: ^1.8.3
   shared_preferences: ^2.2.2
-  intl: ^0.20.2
-  collection: ^1.18.0
-  uuid: ^4.2.1
-  http: ^1.1.0
-  url_launcher: ^6.2.5
-  csv: ^6.0.0
-  printing: ^5.11.1
-  pdf: ^3.10.7
-  path_provider: ^2.1.2
-  file_picker: ^8.3.7
-  package_info_plus: ^8.3.0
-  table_calendar: ^3.2.0
-  provider: ^6.1.1
+  uuid: ^4.5.2
   connectivity_plus: ^6.0.3
 
   # UI
   cupertino_icons: ^1.0.8
   flutter_colorpicker: ^1.1.0
   desktop_drop: ^0.5.0
-  schedule_shared:
-    path: ../packages/schedule_shared
+
+  # PDF/Printing
+  pdf: ^3.11.0
+  printing: ^5.12.0
+  http: ^1.6.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  msix: ^3.16.8
+  flutter_lints: ^6.0.0
+  msix: ^3.16.7
 
 flutter:
   uses-material-design: true
-
-# Microsoft Store MSIX Configuration
 msix_config:
   display_name: ScheduleHQ
   publisher_display_name: JasonSjogren
   identity_name: JasonSjogren.ScheduleHQ
   publisher: CN=993C831D-9B99-4BD8-AA74-403CC55DF8EF
-  msix_version: 2.5.1.0
+  msix_version: 2.5.0.0
   logo_path: windows/runner/resources/app_icon.ico
+  # certificate_path: certs/ManagerScheduleApp.pfx  # Comment out for store builds
   store: true
   capabilities: internetClient
   languages: en-us
