--- a/ScheduleHQ_Desktop/pubspec_store.yaml
+++ b/ScheduleHQ_Desktop/pubspec_store.yaml
@@ -2,7 +2,7 @@ name: schedulehq_desktop
 description: "ScheduleHQ Desktop - Workforce scheduling and PTO management app."
 publish_to: 'none'
 
-version: 2.5.0+1
+version: 2.5.1+1
 
 environment:
   sdk: ^3.10.7
@@ -62,10 +62,10 @@ flutter:
 # Microsoft Store MSIX Configuration
 msix_config:
   display_name: ScheduleHQ
-  publisher_display_name: Jason S
-  identity_name: JasonS.ScheduleHQ
+  publisher_display_name: JasonSjogren
+  identity_name: JasonSjogren.ScheduleHQ
   publisher: CN=993C831D-9B99-4BD8-AA74-403CC55DF8EF
-  msix_version: 2.5.0.0
+  msix_version: 2.5.1.0
   logo_path: windows/runner/resources/app_icon.ico
   store: true
   capabilities: internetClient
