Major sync improvements: per-manager DB, monthly shifts, employee features
Desktop App:
- Per-manager SQLite databases (work_schedule_{uid}.db)
- Restructured Firestore shifts to monthly: schedules/{YYYY-MM}/shifts
- Consolidated cloud sync UI to single Upload/Download buttons
- Added job code groups and shift templates to settings sync
- Added unpublish schedule feature
- Removed legacy Firestore collections from rules
- Fixed JobCodeSettings hasPTO parsing (bool vs int)
- Added fixInvalidEmployeeUids cloud function

Android App:
- Show shift runner assignments for employees (star badge)
- Display daily schedule notes from manager
- Updated to query monthly shifts structure
- Added rxdart for combining multiple streams
- Fixed notification service to use manager subcollection

Firestore:
- Removed legacy root collections (employees, shifts, publishedSchedules, etc)
- Updated shiftRunners/scheduleNotes for employee read access
- Removed deprecated timeOffRequests indexes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "git add": true,
         "git commit": true,
         "Set-Location": true,
-        "git restore": true
+        "git restore": true,
+        "firebase": true
     }
 }
