iOS: Modern UI overhaul with Runner badges and swipe navigation
- Added Theme.swift design system with colors, gradients, typography
- ShiftCard redesign with RUNNER and DAY OFF badges inside cards
- DateHeader shows date, TODAY indicator, and daily notes
- Fetch shift runners from shiftRunners collection
- Fetch daily notes from scheduleNotes collection
- Swipe left/right to navigate between weeks
- Background gradient for light/dark modes
- Removed generic time-based labels (Morning/Day/Evening)
- Shows actual shift roles from database (Runner, etc.)

--- a/ScheduleHQ_IOS/project.yml
+++ b/ScheduleHQ_IOS/project.yml
@@ -34,6 +34,7 @@ targets:
         INFOPLIST_KEY_UISupportedInterfaceOrientations_iPad: "UIInterfaceOrientationPortrait UIInterfaceOrientationPortraitUpsideDown UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
         SWIFT_VERSION: "5.9"
         CODE_SIGN_STYLE: Automatic
+        DEVELOPMENT_TEAM: S4LN25J73K
         ENABLE_PREVIEWS: YES
     dependencies:
       - package: FirebaseAuth
@@ -42,10 +43,6 @@ targets:
         product: FirebaseFirestore
       - package: FirebaseAuth
         product: FirebaseMessaging
-    entitlements:
-      path: ScheduleHQ/ScheduleHQ.entitlements
-      properties:
-        aps-environment: development
 
 schemes:
   ScheduleHQ:
