--- a/ScheduleHQ_IOS/GoogleService-Info.plist
+++ b/ScheduleHQ_IOS/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ScheduleHQ.IOS</string>
+	<string>com.schedulehq.ios</string>
 	<key>PROJECT_ID</key>
 	<string>schedulehq-cf87f</string>
 	<key>STORAGE_BUCKET</key>
