--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "git add": true,
         "git commit": true,
         "Set-Location": true,
-        "git restore": true
+        "git restore": true,
+        "xcrun": true,
+        "xcodebuild": true
     }
 }
