--- a/ScheduleHQ_IOS/project.yml
+++ b/ScheduleHQ_IOS/project.yml
@@ -32,6 +32,7 @@ targets:
         INFOPLIST_KEY_UILaunchScreen_Generation: YES
         INFOPLIST_KEY_UISupportedInterfaceOrientations_iPhone: "UIInterfaceOrientationPortrait UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
         INFOPLIST_KEY_UISupportedInterfaceOrientations_iPad: "UIInterfaceOrientationPortrait UIInterfaceOrientationPortraitUpsideDown UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
+        INFOPLIST_KEY_NSPhotoLibraryUsageDescription: "Select a profile photo"
         SWIFT_VERSION: "5.9"
         CODE_SIGN_STYLE: Automatic
         DEVELOPMENT_TEAM: S4LN25J73K
@@ -43,6 +44,8 @@ targets:
         product: FirebaseFirestore
       - package: FirebaseAuth
         product: FirebaseMessaging
+      - package: FirebaseAuth
+        product: FirebaseStorage
 
 schemes:
   ScheduleHQ:
