Update VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "xcrun": true,
         "xcodebuild": true,
         "firebase": true
-    }
+    },
+    "cmake.sourceDirectory": "E:/ScheduleHQ/ScheduleHQ_Desktop/windows"
 }
