--- a/ScheduleHQ_Desktop/pubspec.yaml
+++ b/ScheduleHQ_Desktop/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/app_icon.png
+    - assets/images/onboarding/
 
 # Microsoft Store MSIX Configuration
 msix_config:
